Added UI to the project
Using event listeners a user interface has been
added to the game.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
     <title>Rock paper scissors game</title>
 </head>
 <body>
+    <div id="container">
+        <button id = "rock">Rock</button>
+        <button id = "paper">Paper</button>
+        <button id = "scissors">Scissors</button>
+    </div>
+
+    <div id="choice"><p></p></div>
     
+    <div id="scores">
+        <p>Player: 0</p>
+        <p>Computer: 0</p>
+    </div>
+
+    <div class="final-score">
+        <p></p>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
