Added styles to the UI
A new style wheet was added with a few simple layout
styles to tidy the page.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock paper scissors game</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Rock paper scissors. Best to 5.</h1>
     <div id="container">
         <button id = "rock">Rock</button>
         <button id = "paper">Paper</button>
@@ -22,6 +24,8 @@
     <div class="final-score">
         <p></p>
     </div>
+
+    <p>(Reload to play again)</p>
 </body>
 <script src="script.js"></script>
 </html>
